Fix merging invisible layers

They should be just deleted and not merged

BUG:359707